<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_home"
        android:title="@string/nav_home"
        app:showAsAction="always"/>

    <item
        android:id="@+id/nav_profile"
        android:title="@string/nav_profile"
        app:showAsAction="always"/>

    <item
        android:id="@+id/nav_track_order"
        android:title="@string/nav_track_order"
        app:showAsAction="always"/>

    <item
        android:id="@+id/nav_past_order"
        android:title="@string/nav_past_order"
        app:showAsAction="always"/>

    <item
        android:id="@+id/nav_share"
        android:title="@string/nav_share"
        app:showAsAction="always"/>

    <item
        android:id="@+id/nav_rate_us"
        android:title="@string/nave_rate_us"
        app:showAsAction="always"/>

    <item
        android:id="@+id/nav_help_support"
        android:title="@string/nav_help_support"
        app:showAsAction="always"/>

    <item
        android:id="@+id/nav_admin_order"
        android:title="Admin Order Panel"
        app:showAsAction="always"/>


</menu>
