<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="#f2530f"
        android:elevation="10dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ib_back_arrow"
            android:padding="10dp"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:background="#00000000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_forgot_pass"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            />

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_phone_no"
        android:hint="@string/string_phone"
        android:layout_marginTop="40dp"
        android:textColorHint="#4e4c4c"
        android:background="@drawable/login_edt_bg"
        android:padding="10dp"
        android:layout_margin="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_submit"
        android:id="@+id/btn_submit"
        android:layout_marginTop="15dp"
        android:background="@drawable/login_btn_bg"
        android:textColor="@color/colorWhite"
        android:layout_margin="10dp"
        android:elevation="10dp"
        />

</LinearLayout>
