<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:id="@+id/layout_sign_in">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:background="@raw/background">

            <ImageView
                android:id="@+id/imageview_hospital"
                android:layout_width="220dp"
                android:layout_height="240dp"
                android:src="@raw/foodlogo"
                android:padding="10dp"
                android:layout_gravity="center"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/sign_in_bg"
            android:elevation="10dp"
            android:padding="20dp"
            android:id="@+id/layout_sign_in2">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_edt_bg"
                android:textColor="@android:color/black"
                android:padding="10dp"
                android:drawableLeft="@raw/cellphone"
                android:drawablePadding="10dp"
                android:textColorHint="#797676"
                android:hint="@string/string_phone"
                android:maxLength="10"
                android:inputType="number"
                android:windowSoftInputMode="adjustResize"
                android:nextFocusDown="@id/edt_password"
                android:singleLine="true"
                android:id="@+id/edt_phoneno"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_edt_bg"
                android:textColor="@android:color/black"
                android:padding="10dp"
                android:drawableLeft="@raw/lock"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColorHint="#797676"
                android:hint="@string/string_password"
                android:nextFocusDown="@id/btn_sign_in"
                android:id="@+id/edt_password"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_marginTop="10dp"
                android:textColor="#4e4c4c"
                android:text="@string/string_forgot_pw"
                android:id="@+id/tv_forgot_pw"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/white"
                android:background="@drawable/login_btn_bg"
                android:text="@string/string_sign_in"
                android:elevation="10dp"
                android:id="@+id/btn_sign_in"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="#b3b0b0"
                    android:text="@string/string_new_acc"
                    android:id="@+id/tv_new_account"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:layout_marginLeft="10dp"
                    android:textColor="#4e4c4c"
                    android:text="@string/string_create_now"
                    android:clickable="true"
                    android:id="@+id/tv_create_now"/>

            </LinearLayout>



        </LinearLayout>

    </LinearLayout>
</LinearLayout>
